libs/extractor/tests/snapshots/snapshots/extractor__tests__extract_enum_style_property-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box positioning=\"wrong\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<div />;\n",
}
