libs/extractor/tests/snapshots/snapshots/extractor__tests__extract_enum_style_property-6.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box positioning={[a, b, \"top\", \"left\", \"wrong\"]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "bottom",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "bottom",
                value: "0",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "left",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "left",
                value: "0",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "left",
                value: "0",
                level: 3,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "right",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "right",
                value: "0",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "top",
                value: "0",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "top",
                value: "0",
                level: 1,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "top",
                value: "0",
                level: 2,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n<div className={`a-i a-j ${{\n\t\"bottom\": \"a-a\",\n\t\"bottom-left\": \"a-a a-b\",\n\t\"bottom-right\": \"a-a a-c\",\n\t\"left\": \"a-b\",\n\t\"right\": \"a-c\",\n\t\"top\": \"a-d\",\n\t\"top-left\": \"a-b a-d\",\n\t\"top-right\": \"a-c a-d\"\n}[a] || \"\"} ${{\n\t\"bottom\": \"a-e\",\n\t\"bottom-left\": \"a-e a-f\",\n\t\"bottom-right\": \"a-e a-g\",\n\t\"left\": \"a-f\",\n\t\"right\": \"a-g\",\n\t\"top\": \"a-h\",\n\t\"top-left\": \"a-f a-h\",\n\t\"top-right\": \"a-g a-h\"\n}[b] || \"\"}`} />;\n",
}
